comp/csua.output
Terminals unused in grammar

    COMMA
    COLON
    DOT
    WHILE
    FOR
    RETURN
    BREAK
    CONTINUE
    STRING_T


State 97 conflicts: 2 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: definition_or_statement
    2                 | translation_unit definition_or_statement

    3 definition_or_statement: function_definition
    4                        | statement

    5 function_definition: type_specifier IDENTIFIER LP RP SEMICOLON

    6 statement: expression SEMICOLON
    7          | declaration_statement
    8          | block
    9          | if_statement

   10 declaration_statement: type_specifier IDENTIFIER SEMICOLON
   11                      | type_specifier IDENTIFIER ASSIGN_T expression SEMICOLON

   12 block: LC statement_list RC

   13 statement_list: statement
   14               | statement_list statement

   15 if_statement: IF LP expression RP statement else_list
   16             | IF LP expression RP statement else_list ELSE statement

   17 else_list: ε
   18          | else_list ELSIF LP expression RP statement

   19 type_specifier: BOOLEAN_T
   20               | INT_T
   21               | DOUBLE_T

   22 expression: assignment_expression

   23 assignment_expression: logical_or_expression
   24                      | postfix_expression assignment_operator assignment_expression

   25 assignment_operator: ASSIGN_T
   26                    | ADD_ASSIGN_T
   27                    | SUB_ASSIGN_T
   28                    | MUL_ASSIGN_T
   29                    | DIV_ASSIGN_T
   30                    | MOD_ASSIGN_T

   31 logical_or_expression: logical_and_expression
   32                      | logical_or_expression LOGICAL_OR logical_and_expression

   33 logical_and_expression: equality_expression
   34                       | logical_and_expression LOGICAL_AND equality_expression

   35 equality_expression: relational_expression
   36                    | equality_expression EQ relational_expression
   37                    | equality_expression NE relational_expression

   38 relational_expression: additive_expression
   39                      | relational_expression GT additive_expression
   40                      | relational_expression GE additive_expression
   41                      | relational_expression LT additive_expression
   42                      | relational_expression LE additive_expression

   43 additive_expression: multiplicative_expression
   44                    | additive_expression ADD multiplicative_expression
   45                    | additive_expression SUB multiplicative_expression

   46 multiplicative_expression: unary_expression
   47                          | multiplicative_expression MUL unary_expression
   48                          | multiplicative_expression DIV unary_expression
   49                          | multiplicative_expression MOD unary_expression

   50 unary_expression: postfix_expression
   51                 | SUB unary_expression
   52                 | EXCLAMATION unary_expression

   53 postfix_expression: primary_expression
   54                   | postfix_expression LP RP
   55                   | postfix_expression INCREMENT
   56                   | postfix_expression DECREMENT

   57 primary_expression: LP expression RP
   58                   | IDENTIFIER
   59                   | INT_LITERAL
   60                   | DOUBLE_LITERAL
   61                   | TRUE_T
   62                   | FALSE_T


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LP (258) 5 15 16 18 54 57
    RP (259) 5 15 16 18 54 57
    LC (260) 12
    RC (261) 12
    COMMA (262)
    LOGICAL_AND (263) 34
    LOGICAL_OR (264) 32
    EQ (265) 36
    ASSIGN_T (266) 11 25
    NE (267) 37
    GT (268) 39
    GE (269) 40
    LE (270) 42
    LT (271) 41
    SEMICOLON (272) 5 6 10 11
    COLON (273)
    ADD (274) 44
    SUB (275) 45 51
    MUL (276) 47
    DIV (277) 48
    MOD (278) 49
    ADD_ASSIGN_T (279) 26
    SUB_ASSIGN_T (280) 27
    MUL_ASSIGN_T (281) 28
    DIV_ASSIGN_T (282) 29
    MOD_ASSIGN_T (283) 30
    INCREMENT (284) 55
    DECREMENT (285) 56
    EXCLAMATION (286) 52
    DOT (287)
    INT_LITERAL <iv> (288) 59
    DOUBLE_LITERAL <dv> (289) 60
    IDENTIFIER <name> (290) 5 10 11 58
    IF (291) 15 16
    ELSE (292) 16
    ELSIF (293) 18
    WHILE (294)
    FOR (295)
    RETURN (296)
    BREAK (297)
    CONTINUE (298)
    TRUE_T (299) 61
    FALSE_T (300) 62
    BOOLEAN_T (301) 19
    INT_T (302) 20
    DOUBLE_T (303) 21
    STRING_T (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    translation_unit (51)
        on left: 1 2
        on right: 0 2
    definition_or_statement (52)
        on left: 3 4
        on right: 1 2
    function_definition <function_declaration> (53)
        on left: 5
        on right: 3
    statement <statement> (54)
        on left: 6 7 8 9
        on right: 4 13 14 15 16 18
    declaration_statement <statement> (55)
        on left: 10 11
        on right: 7
    block (56)
        on left: 12
        on right: 8
    statement_list (57)
        on left: 13 14
        on right: 12 14
    if_statement (58)
        on left: 15 16
        on right: 9
    else_list (59)
        on left: 17 18
        on right: 15 16 18
    type_specifier <type_specifier> (60)
        on left: 19 20 21
        on right: 5 10 11
    expression <expression> (61)
        on left: 22
        on right: 6 11 15 16 18 57
    assignment_expression <expression> (62)
        on left: 23 24
        on right: 22 24
    assignment_operator <assignment_operator> (63)
        on left: 25 26 27 28 29 30
        on right: 24
    logical_or_expression <expression> (64)
        on left: 31 32
        on right: 23 32
    logical_and_expression <expression> (65)
        on left: 33 34
        on right: 31 32 34
    equality_expression <expression> (66)
        on left: 35 36 37
        on right: 33 34 36 37
    relational_expression <expression> (67)
        on left: 38 39 40 41 42
        on right: 35 36 37 39 40 41 42
    additive_expression <expression> (68)
        on left: 43 44 45
        on right: 38 39 40 41 42 44 45
    multiplicative_expression <expression> (69)
        on left: 46 47 48 49
        on right: 43 44 45 47 48 49
    unary_expression <expression> (70)
        on left: 50 51 52
        on right: 46 47 48 49 51 52
    postfix_expression <expression> (71)
        on left: 53 54 55 56
        on right: 24 50 54 55 56
    primary_expression <expression> (72)
        on left: 57 58 59 60 61 62
        on right: 53


State 0

    0 $accept: • translation_unit $end

    LP              shift, and go to state 1
    LC              shift, and go to state 2
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10
    BOOLEAN_T       shift, and go to state 11
    INT_T           shift, and go to state 12
    DOUBLE_T        shift, and go to state 13

    translation_unit           go to state 14
    definition_or_statement    go to state 15
    function_definition        go to state 16
    statement                  go to state 17
    declaration_statement      go to state 18
    block                      go to state 19
    if_statement               go to state 20
    type_specifier             go to state 21
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 1

   57 primary_expression: LP • expression RP

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    expression                 go to state 33
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 2

   12 block: LC • statement_list RC

    LP              shift, and go to state 1
    LC              shift, and go to state 2
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10
    BOOLEAN_T       shift, and go to state 11
    INT_T           shift, and go to state 12
    DOUBLE_T        shift, and go to state 13

    statement                  go to state 34
    declaration_statement      go to state 18
    block                      go to state 19
    statement_list             go to state 35
    if_statement               go to state 20
    type_specifier             go to state 36
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 3

   51 unary_expression: SUB • unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    unary_expression    go to state 37
    postfix_expression  go to state 38
    primary_expression  go to state 32


State 4

   52 unary_expression: EXCLAMATION • unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    unary_expression    go to state 39
    postfix_expression  go to state 38
    primary_expression  go to state 32


State 5

   59 primary_expression: INT_LITERAL •

    $default  reduce using rule 59 (primary_expression)


State 6

   60 primary_expression: DOUBLE_LITERAL •

    $default  reduce using rule 60 (primary_expression)


State 7

   58 primary_expression: IDENTIFIER •

    $default  reduce using rule 58 (primary_expression)


State 8

   15 if_statement: IF • LP expression RP statement else_list
   16             | IF • LP expression RP statement else_list ELSE statement

    LP  shift, and go to state 40


State 9

   61 primary_expression: TRUE_T •

    $default  reduce using rule 61 (primary_expression)


State 10

   62 primary_expression: FALSE_T •

    $default  reduce using rule 62 (primary_expression)


State 11

   19 type_specifier: BOOLEAN_T •

    $default  reduce using rule 19 (type_specifier)


State 12

   20 type_specifier: INT_T •

    $default  reduce using rule 20 (type_specifier)


State 13

   21 type_specifier: DOUBLE_T •

    $default  reduce using rule 21 (type_specifier)


State 14

    0 $accept: translation_unit • $end
    2 translation_unit: translation_unit • definition_or_statement

    $end            shift, and go to state 41
    LP              shift, and go to state 1
    LC              shift, and go to state 2
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10
    BOOLEAN_T       shift, and go to state 11
    INT_T           shift, and go to state 12
    DOUBLE_T        shift, and go to state 13

    definition_or_statement    go to state 42
    function_definition        go to state 16
    statement                  go to state 17
    declaration_statement      go to state 18
    block                      go to state 19
    if_statement               go to state 20
    type_specifier             go to state 21
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 15

    1 translation_unit: definition_or_statement •

    $default  reduce using rule 1 (translation_unit)


State 16

    3 definition_or_statement: function_definition •

    $default  reduce using rule 3 (definition_or_statement)


State 17

    4 definition_or_statement: statement •

    $default  reduce using rule 4 (definition_or_statement)


State 18

    7 statement: declaration_statement •

    $default  reduce using rule 7 (statement)


State 19

    8 statement: block •

    $default  reduce using rule 8 (statement)


State 20

    9 statement: if_statement •

    $default  reduce using rule 9 (statement)


State 21

    5 function_definition: type_specifier • IDENTIFIER LP RP SEMICOLON
   10 declaration_statement: type_specifier • IDENTIFIER SEMICOLON
   11                      | type_specifier • IDENTIFIER ASSIGN_T expression SEMICOLON

    IDENTIFIER  shift, and go to state 43


State 22

    6 statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 44


State 23

   22 expression: assignment_expression •

    $default  reduce using rule 22 (expression)


State 24

   23 assignment_expression: logical_or_expression •
   32 logical_or_expression: logical_or_expression • LOGICAL_OR logical_and_expression

    LOGICAL_OR  shift, and go to state 45

    $default  reduce using rule 23 (assignment_expression)


State 25

   31 logical_or_expression: logical_and_expression •
   34 logical_and_expression: logical_and_expression • LOGICAL_AND equality_expression

    LOGICAL_AND  shift, and go to state 46

    $default  reduce using rule 31 (logical_or_expression)


State 26

   33 logical_and_expression: equality_expression •
   36 equality_expression: equality_expression • EQ relational_expression
   37                    | equality_expression • NE relational_expression

    EQ  shift, and go to state 47
    NE  shift, and go to state 48

    $default  reduce using rule 33 (logical_and_expression)


State 27

   35 equality_expression: relational_expression •
   39 relational_expression: relational_expression • GT additive_expression
   40                      | relational_expression • GE additive_expression
   41                      | relational_expression • LT additive_expression
   42                      | relational_expression • LE additive_expression

    GT  shift, and go to state 49
    GE  shift, and go to state 50
    LE  shift, and go to state 51
    LT  shift, and go to state 52

    $default  reduce using rule 35 (equality_expression)


State 28

   38 relational_expression: additive_expression •
   44 additive_expression: additive_expression • ADD multiplicative_expression
   45                    | additive_expression • SUB multiplicative_expression

    ADD  shift, and go to state 53
    SUB  shift, and go to state 54

    $default  reduce using rule 38 (relational_expression)


State 29

   43 additive_expression: multiplicative_expression •
   47 multiplicative_expression: multiplicative_expression • MUL unary_expression
   48                          | multiplicative_expression • DIV unary_expression
   49                          | multiplicative_expression • MOD unary_expression

    MUL  shift, and go to state 55
    DIV  shift, and go to state 56
    MOD  shift, and go to state 57

    $default  reduce using rule 43 (additive_expression)


State 30

   46 multiplicative_expression: unary_expression •

    $default  reduce using rule 46 (multiplicative_expression)


State 31

   24 assignment_expression: postfix_expression • assignment_operator assignment_expression
   50 unary_expression: postfix_expression •
   54 postfix_expression: postfix_expression • LP RP
   55                   | postfix_expression • INCREMENT
   56                   | postfix_expression • DECREMENT

    LP            shift, and go to state 58
    ASSIGN_T      shift, and go to state 59
    ADD_ASSIGN_T  shift, and go to state 60
    SUB_ASSIGN_T  shift, and go to state 61
    MUL_ASSIGN_T  shift, and go to state 62
    DIV_ASSIGN_T  shift, and go to state 63
    MOD_ASSIGN_T  shift, and go to state 64
    INCREMENT     shift, and go to state 65
    DECREMENT     shift, and go to state 66

    $default  reduce using rule 50 (unary_expression)

    assignment_operator  go to state 67


State 32

   53 postfix_expression: primary_expression •

    $default  reduce using rule 53 (postfix_expression)


State 33

   57 primary_expression: LP expression • RP

    RP  shift, and go to state 68


State 34

   13 statement_list: statement •

    $default  reduce using rule 13 (statement_list)


State 35

   12 block: LC statement_list • RC
   14 statement_list: statement_list • statement

    LP              shift, and go to state 1
    LC              shift, and go to state 2
    RC              shift, and go to state 69
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10
    BOOLEAN_T       shift, and go to state 11
    INT_T           shift, and go to state 12
    DOUBLE_T        shift, and go to state 13

    statement                  go to state 70
    declaration_statement      go to state 18
    block                      go to state 19
    if_statement               go to state 20
    type_specifier             go to state 36
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 36

   10 declaration_statement: type_specifier • IDENTIFIER SEMICOLON
   11                      | type_specifier • IDENTIFIER ASSIGN_T expression SEMICOLON

    IDENTIFIER  shift, and go to state 71


State 37

   51 unary_expression: SUB unary_expression •

    $default  reduce using rule 51 (unary_expression)


State 38

   50 unary_expression: postfix_expression •
   54 postfix_expression: postfix_expression • LP RP
   55                   | postfix_expression • INCREMENT
   56                   | postfix_expression • DECREMENT

    LP         shift, and go to state 58
    INCREMENT  shift, and go to state 65
    DECREMENT  shift, and go to state 66

    $default  reduce using rule 50 (unary_expression)


State 39

   52 unary_expression: EXCLAMATION unary_expression •

    $default  reduce using rule 52 (unary_expression)


State 40

   15 if_statement: IF LP • expression RP statement else_list
   16             | IF LP • expression RP statement else_list ELSE statement

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    expression                 go to state 72
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 41

    0 $accept: translation_unit $end •

    $default  accept


State 42

    2 translation_unit: translation_unit definition_or_statement •

    $default  reduce using rule 2 (translation_unit)


State 43

    5 function_definition: type_specifier IDENTIFIER • LP RP SEMICOLON
   10 declaration_statement: type_specifier IDENTIFIER • SEMICOLON
   11                      | type_specifier IDENTIFIER • ASSIGN_T expression SEMICOLON

    LP         shift, and go to state 73
    ASSIGN_T   shift, and go to state 74
    SEMICOLON  shift, and go to state 75


State 44

    6 statement: expression SEMICOLON •

    $default  reduce using rule 6 (statement)


State 45

   32 logical_or_expression: logical_or_expression LOGICAL_OR • logical_and_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    logical_and_expression     go to state 76
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 46

   34 logical_and_expression: logical_and_expression LOGICAL_AND • equality_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    equality_expression        go to state 77
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 47

   36 equality_expression: equality_expression EQ • relational_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    relational_expression      go to state 78
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 48

   37 equality_expression: equality_expression NE • relational_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    relational_expression      go to state 79
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 49

   39 relational_expression: relational_expression GT • additive_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    additive_expression        go to state 80
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 50

   40 relational_expression: relational_expression GE • additive_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    additive_expression        go to state 81
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 51

   42 relational_expression: relational_expression LE • additive_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    additive_expression        go to state 82
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 52

   41 relational_expression: relational_expression LT • additive_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    additive_expression        go to state 83
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 53

   44 additive_expression: additive_expression ADD • multiplicative_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    multiplicative_expression  go to state 84
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 54

   45 additive_expression: additive_expression SUB • multiplicative_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    multiplicative_expression  go to state 85
    unary_expression           go to state 30
    postfix_expression         go to state 38
    primary_expression         go to state 32


State 55

   47 multiplicative_expression: multiplicative_expression MUL • unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    unary_expression    go to state 86
    postfix_expression  go to state 38
    primary_expression  go to state 32


State 56

   48 multiplicative_expression: multiplicative_expression DIV • unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    unary_expression    go to state 87
    postfix_expression  go to state 38
    primary_expression  go to state 32


State 57

   49 multiplicative_expression: multiplicative_expression MOD • unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    unary_expression    go to state 88
    postfix_expression  go to state 38
    primary_expression  go to state 32


State 58

   54 postfix_expression: postfix_expression LP • RP

    RP  shift, and go to state 89


State 59

   25 assignment_operator: ASSIGN_T •

    $default  reduce using rule 25 (assignment_operator)


State 60

   26 assignment_operator: ADD_ASSIGN_T •

    $default  reduce using rule 26 (assignment_operator)


State 61

   27 assignment_operator: SUB_ASSIGN_T •

    $default  reduce using rule 27 (assignment_operator)


State 62

   28 assignment_operator: MUL_ASSIGN_T •

    $default  reduce using rule 28 (assignment_operator)


State 63

   29 assignment_operator: DIV_ASSIGN_T •

    $default  reduce using rule 29 (assignment_operator)


State 64

   30 assignment_operator: MOD_ASSIGN_T •

    $default  reduce using rule 30 (assignment_operator)


State 65

   55 postfix_expression: postfix_expression INCREMENT •

    $default  reduce using rule 55 (postfix_expression)


State 66

   56 postfix_expression: postfix_expression DECREMENT •

    $default  reduce using rule 56 (postfix_expression)


State 67

   24 assignment_expression: postfix_expression assignment_operator • assignment_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    assignment_expression      go to state 90
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 68

   57 primary_expression: LP expression RP •

    $default  reduce using rule 57 (primary_expression)


State 69

   12 block: LC statement_list RC •

    $default  reduce using rule 12 (block)


State 70

   14 statement_list: statement_list statement •

    $default  reduce using rule 14 (statement_list)


State 71

   10 declaration_statement: type_specifier IDENTIFIER • SEMICOLON
   11                      | type_specifier IDENTIFIER • ASSIGN_T expression SEMICOLON

    ASSIGN_T   shift, and go to state 74
    SEMICOLON  shift, and go to state 75


State 72

   15 if_statement: IF LP expression • RP statement else_list
   16             | IF LP expression • RP statement else_list ELSE statement

    RP  shift, and go to state 91


State 73

    5 function_definition: type_specifier IDENTIFIER LP • RP SEMICOLON

    RP  shift, and go to state 92


State 74

   11 declaration_statement: type_specifier IDENTIFIER ASSIGN_T • expression SEMICOLON

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    expression                 go to state 93
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 75

   10 declaration_statement: type_specifier IDENTIFIER SEMICOLON •

    $default  reduce using rule 10 (declaration_statement)


State 76

   32 logical_or_expression: logical_or_expression LOGICAL_OR logical_and_expression •
   34 logical_and_expression: logical_and_expression • LOGICAL_AND equality_expression

    LOGICAL_AND  shift, and go to state 46

    $default  reduce using rule 32 (logical_or_expression)


State 77

   34 logical_and_expression: logical_and_expression LOGICAL_AND equality_expression •
   36 equality_expression: equality_expression • EQ relational_expression
   37                    | equality_expression • NE relational_expression

    EQ  shift, and go to state 47
    NE  shift, and go to state 48

    $default  reduce using rule 34 (logical_and_expression)


State 78

   36 equality_expression: equality_expression EQ relational_expression •
   39 relational_expression: relational_expression • GT additive_expression
   40                      | relational_expression • GE additive_expression
   41                      | relational_expression • LT additive_expression
   42                      | relational_expression • LE additive_expression

    GT  shift, and go to state 49
    GE  shift, and go to state 50
    LE  shift, and go to state 51
    LT  shift, and go to state 52

    $default  reduce using rule 36 (equality_expression)


State 79

   37 equality_expression: equality_expression NE relational_expression •
   39 relational_expression: relational_expression • GT additive_expression
   40                      | relational_expression • GE additive_expression
   41                      | relational_expression • LT additive_expression
   42                      | relational_expression • LE additive_expression

    GT  shift, and go to state 49
    GE  shift, and go to state 50
    LE  shift, and go to state 51
    LT  shift, and go to state 52

    $default  reduce using rule 37 (equality_expression)


State 80

   39 relational_expression: relational_expression GT additive_expression •
   44 additive_expression: additive_expression • ADD multiplicative_expression
   45                    | additive_expression • SUB multiplicative_expression

    ADD  shift, and go to state 53
    SUB  shift, and go to state 54

    $default  reduce using rule 39 (relational_expression)


State 81

   40 relational_expression: relational_expression GE additive_expression •
   44 additive_expression: additive_expression • ADD multiplicative_expression
   45                    | additive_expression • SUB multiplicative_expression

    ADD  shift, and go to state 53
    SUB  shift, and go to state 54

    $default  reduce using rule 40 (relational_expression)


State 82

   42 relational_expression: relational_expression LE additive_expression •
   44 additive_expression: additive_expression • ADD multiplicative_expression
   45                    | additive_expression • SUB multiplicative_expression

    ADD  shift, and go to state 53
    SUB  shift, and go to state 54

    $default  reduce using rule 42 (relational_expression)


State 83

   41 relational_expression: relational_expression LT additive_expression •
   44 additive_expression: additive_expression • ADD multiplicative_expression
   45                    | additive_expression • SUB multiplicative_expression

    ADD  shift, and go to state 53
    SUB  shift, and go to state 54

    $default  reduce using rule 41 (relational_expression)


State 84

   44 additive_expression: additive_expression ADD multiplicative_expression •
   47 multiplicative_expression: multiplicative_expression • MUL unary_expression
   48                          | multiplicative_expression • DIV unary_expression
   49                          | multiplicative_expression • MOD unary_expression

    MUL  shift, and go to state 55
    DIV  shift, and go to state 56
    MOD  shift, and go to state 57

    $default  reduce using rule 44 (additive_expression)


State 85

   45 additive_expression: additive_expression SUB multiplicative_expression •
   47 multiplicative_expression: multiplicative_expression • MUL unary_expression
   48                          | multiplicative_expression • DIV unary_expression
   49                          | multiplicative_expression • MOD unary_expression

    MUL  shift, and go to state 55
    DIV  shift, and go to state 56
    MOD  shift, and go to state 57

    $default  reduce using rule 45 (additive_expression)


State 86

   47 multiplicative_expression: multiplicative_expression MUL unary_expression •

    $default  reduce using rule 47 (multiplicative_expression)


State 87
